--- a/src/pug/sections/_advertisement-content.pug
+++ b/src/pug/sections/_advertisement-content.pug
@@ -7,7 +7,7 @@
             .swiper-pagination.advertisement-pagination
             .swiper-button-next.advertisement-button-next
     .swiper-wrapper.advertisement__wrapper
-        // Slides
+        //- Slides
         .swiper-slide
             .block.block--wide
                 .block__content.block__content--main
