Поправил модальное окно, анимации, размер окна. Поправил кнопку, добавил документацию кнопок

--- a/src/pug/pages/page-list.pug
+++ b/src/pug/pages/page-list.pug
@@ -502,25 +502,25 @@ block content
             p Синтаксис
             pre.
                 button(class="page__button btn btn--modifier")
-            ul(style="display:flex; flex-wrap: wrap; width: 180px; gap: 10px; list-style: none; flex-direction: column")
+            ul(style="display:flex; flex-wrap: wrap; gap: 10px; list-style: none; width: 500px; height: 200px; justify-content: center; flex-direction: column; padding: 0; margin: 0 auto;")
                 li
-                    .btn .btn
+                    button.btn .btn
                 li
-                    .btn--light .btn--light
+                    button.btn--light .btn--light
                 li
-                    .btn.btn--icon(style="position: relative") .btn--icon
-                        svg(width='18' height='18' style='position: absolute; content: ""; display: block; width: 18px; height: 18px; top: 40px; left: 30px;')
+                    button.btn.btn--icon(style="position: relative") .btn--icon
+                        svg(width='18' height='18' style='position: absolute; content: ""; display: block; width: 18px; height: 18px; top: 25px; left: 30px;')
                             use(href="#key")
                 li
-                    .btn.btn--border .btn--border
+                    button.btn.btn--border .btn--border
                 li
-                    .btn.btn--regular .btn--regular
+                    button.btn.btn--regular .btn--regular
                 li
-                    .btn.btn--blue .btn--blue
+                    button.btn.btn--blue .btn--blue
                 li
-                    .btn.btn--green .btn--green
+                    button.btn.btn--green .btn--green
                 li
-                    .btn.btn--grey .btn--grey
+                    button.btn.btn--grey .btn--grey
 
         .card--stack.tabs__item(id="slider")
             h1.title Слайдер
