--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -52,7 +52,7 @@ header.page-header.js-header
                                     rect.closed-eye(x='22' y='3.984' width='4' height='44' transform='translate(25.403 -9.36) rotate(45)' style='fill:#fff')
 
 
-                            input(required placeholder='*****' id="password" name="password" type="text").form__input.form__input--password
+                            input(required placeholder='Пароль' id="password" name="password" type="text").form__input.form__input--password
 
                         .modal__buttons
                             button(type="submit").modal__enter.btn.btn--blue Войти
