--- a/src/pug/sections/_news.pug
+++ b/src/pug/sections/_news.pug
@@ -1,5 +1,5 @@
 section.news
-    .news__container.swiper-container.container
+    .news__container.container
         .news__header
             h2.news__titile(style="margin-right: 10px") Студенческие новости
             span.divider
