--- a/src/pug/sections/_partners.pug
+++ b/src/pug/sections/_partners.pug
@@ -7,41 +7,41 @@ section.partners
             ul.partners__list.swiper-wrapper
                 li.partners__item.swiper-slide
                     a.partners__link(href="#")
-                        img(src="img/adidas.svg" alt="adidas")
+                        img(width="100%" height="auto" src="img/adidas.svg" alt="adidas")
                 li.partners__item.swiper-slide
                     a.partners__link(href="#")
-                        img(src="img/adecco.svg" alt="adecco")
+                        img(width="100%" height="auto" src="img/adecco.svg" alt="adecco")
                 li.partners__item.swiper-slide
                     a.partners__link(href="#")
-                        img(src="img/hh.svg" alt="HeadHunter")
+                        img(width="100%" height="auto" src="img/hh.svg" alt="HeadHunter")
                 li.partners__item.swiper-slide
                     a.partners__link(href="#")
-                        img(src="img/inditex.svg" alt="Inditex")
+                        img(width="100%" height="auto" src="img/inditex.svg" alt="Inditex")
                 li.partners__item.swiper-slide
                     a.partners__link(href="#")
-                        img(src="img/rosgosstrah.svg" alt="Росгосстрах")
+                        img(width="100%" height="auto" src="img/rosgosstrah.svg" alt="Росгосстрах")
                 li.partners__item.swiper-slide
                     a.partners__link(href="#")
-                        img(src="img/Adecco.svg" alt="Adecco")
+                        img(width="100%" height="auto" src="img/adecco.svg" alt="Adecco")
                 li.partners__item.swiper-slide
                     a.partners__link(href="#")
-                        img(src="img/adidas.svg" alt="Adidas")
+                        img(width="100%" height="auto" src="img/adidas.svg" alt="Adidas")
                 li.partners__item.swiper-slide
                     a.partners__link(href="#")
-                        img(src="img/adecco.svg" alt="Adecco")
+                        img(width="100%" height="auto" src="img/adecco.svg" alt="Adecco")
                 li.partners__item.swiper-slide
                     a.partners__link(href="#")
-                        img(src="img/hh.svg" alt="HeadHunter")
+                        img(width="100%" height="auto" src="img/hh.svg" alt="HeadHunter")
                 li.partners__item.swiper-slide
                     a.partners__link(href="#")
-                        img(src="img/adidas.svg" alt="Adidas")
+                        img(width="100%" height="auto" src="img/adidas.svg" alt="Adidas")
                 li.partners__item.swiper-slide
                     a.partners__link(href="#")
-                        img(src="img/adidas.svg" alt="Adidas")
+                        img(width="100%" height="auto" src="img/adidas.svg" alt="Adidas")
                 li.partners__item.swiper-slide
                     a.partners__link(href="#")
-                        img(src="img/hh.svg" alt="Head Hunter")
+                        img(width="100%" height="auto" src="img/hh.svg" alt="Head Hunter")
                 li.partners__item.swiper-slide
                     a.partners__link(href="#")
-                        img(src="img/rssm.svg" alt="РССМ")
+                        img(width="100%" height="auto" src="img/rssm.svg" alt="РССМ")
             .partners__list-pagination.swiper-pagination
