--- a/src/pug/sections/dashboard/_dashboard.pug
+++ b/src/pug/sections/dashboard/_dashboard.pug
@@ -13,7 +13,7 @@ include ./../../mixins/_users
         .portfolio__wrapper
             .portfolio__progress.gauge(data-width="236" data-value="75")
                 span.gauge__value
-    .classmates__wrapper.card.card--stack
+    .classmates__wrapper.card--stack
         h2.classmates__title.title Одногруппники
         .classmates__list.scrollbar-custom
             .classmates__list-wrapper
