--- a/src/pug/sections/_banner.pug
+++ b/src/pug/sections/_banner.pug
@@ -3,7 +3,7 @@ section.banner
         .banner__item.banner__item--more
             a.banner__link(href="#")
                 picture
-                    img.banner__image(src="img/banner-covid.jpg" alt="Баннер Covid-19 информация")
+                    img.banner__image(src="img/banner-covid.jpg" alt="Баннер Covid-19 информация" width="100%" height="208")
                 .banner__info.banner__info--more
                     span.banner__info-title COVID-19
                     span.banner__info-description Актуальная информация
