--- a/src/scss/blocks/_vacancy.scss
+++ b/src/scss/blocks/_vacancy.scss
@@ -121,7 +121,8 @@
         height: 22px;
         fill: $c-blue;
     }
-    &:hover {
+    &:hover,
+    &:focus {
         svg {
             fill: $c-light;
         }
@@ -157,8 +158,7 @@
     padding-right: 10px;
     @media (min-width: $mobile) {
         font-size: 100%;
-        padding-left: 56px;
-        padding-right: 25px;
+        padding: 12px 25px 12px 56px;
         svg {
             left: 28px;
         }
