Остался вопрос с заголовком :)

--- a/src/pug/sections/_new-section.pug
+++ b/src/pug/sections/_new-section.pug
@@ -32,7 +32,7 @@ section.new-section
                     p В 2020-2021 учебном году, в соответствии с учебными планами, обучение по модулю «Технологии содействия профессиональному развитию (волонтерство)» пройдут 843 студента 1 курса РГСУ в рамках обучения по 38 образовательным программам.
             .new-section__other-news
                 h2.new-section__title.title--large Другие новости
-                .news__wrapper.swiper-container
+                .news__wrapper.news__slider-other.swiper-container
                     .swiper-wrapper
                         .news__item.swiper-slide
                             .block.block--wide.block__content-news
