--- a/src/pug/sections/dashboard/_profile.pug
+++ b/src/pug/sections/dashboard/_profile.pug
@@ -139,4 +139,4 @@ section.settings
                 .settings__invite
                     label(for="parent-mail") Email родителя
                     input(type="email" id="parent-mail" required)
-                    button.settings__invite-btn.btn.btn--regular Отправить
+                    button.settings__invite-btn.btn.btn--light Отправить
