--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -34,8 +34,8 @@ header.page-header.js-header
                             a.js-menu-link(href="moderate.html") Модерирование
                         li.login__navigation-item.login__navigation--exit
                             a.js-menu-link.page-header__menu-link--exit(href="#") Завершить сеанс
-                .login__modal.modal.card--stack
-                    button.modal__close.js-close-button Закрыть
+                .login__modal.modal__login.card--stack
+                    button.modal-close.js-close-button Закрыть
                     h3.modal__title Вход на сайт
                     form.modal__form
                         .modal__form-group.modal__form-group--mail
