--- a/src/pug/sections/_news.pug
+++ b/src/pug/sections/_news.pug
@@ -1,54 +1,55 @@
 section.news
     .news__container.container
-        .news__header
-            h2.news__titile(style="margin-right: 10px") Студенческие новости
-            span.divider
-            .news__buttons.news__buttons--extra
+        .news__slider.swiper-container
+            .news__header
+                h2.news__titile(style="margin-right: 10px") Студенческие новости
+                span.divider
+                .news__buttons.news__buttons--extra
+                    .swiper-button-prev.news-button-prev
+                    .swiper-pagination.news-pagination
+                    .swiper-button-next.news-button-next
+            .news__wrapper.swiper-wrapper
+                .news__item.swiper-slide
+                    .block.block--wide.block__content-news
+                        a(href="new-layout.html").block__content
+                            p.news__item-date 1 сентября
+                            h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
+                            picture.news__picture
+                                source(srcset="img/studyear.webp" type="image/webp")
+                                img(src="img/studyear.png")
+                .news__item.swiper-slide
+                    .block.block--wide.block--attention.block__content-news
+                        a(href="new-layout.html").block__content.block__content--hot
+                            p.news__item-date.news__item-date--dark 28 августа
+                            h3.news__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
+                            picture.news__picture
+                                source(srcset="img/studyspring.webp" type="image/webp")
+                                img(src="img/studyspring.png")
+                .news__item.swiper-slide
+                    .block.block--wide.block__content-news
+                        a(href="new-layout.html").block__content
+                            p.news__item-date 1 сентября
+                            h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
+                            picture.news__picture
+                                source(srcset="img/studyear.webp" type="image/webp")
+                                img(src="img/studyear.png")
+                .news__item.swiper-slide
+                    .block.block--wide.block__content-news
+                        a(href="new-layout.html").block__content
+                            p.news__item-date 1 сентября
+                            h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
+                            picture.news__picture
+                                source(srcset="img/studyspring.webp" type="image/webp")
+                                img(src="img/studyspring.png")
+                .news__item.swiper-slide
+                    .block.block--wide.block__content-news
+                        a(href="new-layout.html").block__content
+                            p.news__item-date 1 сентября
+                            h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
+                            picture.news__picture
+                                source(srcset="img/studyear.webp" type="image/webp")
+                                img(src="img/studyear.png")
+            .news__buttons
                 .swiper-button-prev.news-button-prev
                 .swiper-pagination.news-pagination
                 .swiper-button-next.news-button-next
-        .news__wrapper.swiper-wrapper
-            .news__item.swiper-slide
-                .block.block--wide.block__content-news
-                    a(href="new-layout.html").block__content
-                        p.news__item-date 1 сентября
-                        h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
-                        picture.news__picture
-                            source(srcset="img/studyear.webp" type="image/webp")
-                            img(src="img/studyear.png")
-            .news__item.swiper-slide
-                .block.block--wide.block--attention.block__content-news
-                    a(href="new-layout.html").block__content.block__content--hot
-                        p.news__item-date.news__item-date--dark 28 августа
-                        h3.news__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
-                        picture.news__picture
-                            source(srcset="img/studyspring.webp" type="image/webp")
-                            img(src="img/studyspring.png")
-            .news__item.swiper-slide
-                .block.block--wide.block__content-news
-                    a(href="new-layout.html").block__content
-                        p.news__item-date 1 сентября
-                        h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
-                        picture.news__picture
-                            source(srcset="img/studyear.webp" type="image/webp")
-                            img(src="img/studyear.png")
-            .news__item.swiper-slide
-                .block.block--wide.block__content-news
-                    a(href="new-layout.html").block__content
-                        p.news__item-date 1 сентября
-                        h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
-                        picture.news__picture
-                            source(srcset="img/studyspring.webp" type="image/webp")
-                            img(src="img/studyspring.png")
-            .news__item.swiper-slide
-                .block.block--wide.block__content-news
-                    a(href="new-layout.html").block__content
-                        p.news__item-date 1 сентября
-                        h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
-                        picture.news__picture
-                            source(srcset="img/studyear.webp" type="image/webp")
-                            img(src="img/studyear.png")
-        .news__buttons
-            .swiper-button-prev.news-button-prev
-            .swiper-pagination.news-pagination
-            .swiper-button-next.news-button-next
