--- a/src/scss/blocks/_parent-cabinet.scss
+++ b/src/scss/blocks/_parent-cabinet.scss
@@ -141,7 +141,7 @@
     }
 }
 #iOS:checked + label.parent-cabinet__tab-toggle {
-    background-color: #40e699;
+    background-color: $c-darkgrey;
     transition: 0s background 0s ease-in-out;
     &:after {
         transform: translateX(20px);
