--- a/src/scss/blocks/_table.scss
+++ b/src/scss/blocks/_table.scss
@@ -86,7 +86,7 @@
     font-weight: 600;
     font-size: rem-calc(20);
     line-height: 24px;
-    color: #3464e0;
+    color: $c-black;
     text-align: center;
     width: 100%;
     padding-bottom: 18px;
