Поправить анимацию gauge

--- a/src/pug/sections/_advertisement-content.pug
+++ b/src/pug/sections/_advertisement-content.pug
@@ -21,7 +21,7 @@
         .swiper-slide
             .block.block--medium.block--hot
                 .block__content.block__content--main
-                    p.slider__item-descr.slider__item-descr--medium Обновленные профессиональные стандарты в области социальной работы вступают в действие
+                    h3.slider__item-title.slider__item-title--black Обновленные профессиональные стандарты в области социальной работы вступают в действие
                     a(href="#").slider__item-link.slider__item-link--dark Подробнее
                 .block__content--aside
                     p.slider__item-date.slider__item-date--dark 19
@@ -30,7 +30,7 @@
         .swiper-slide
             .block.block--narrow
                 .block__content.block__content--main
-                    p.slider__item-descr.slider__item-descr--narrow Магистр экономических наук из Ярославской области стал Лауреатом – победителем Всероссийского конкурса
+                    h3.slider__item-title.slider__item-title--black Магистр экономических наук из Ярославской области стал Лауреатом – победителем Всероссийского конкурса
                     a(href="#").slider__item-link.slider__item-link--dark Подробнее
                 .block__content--aside
                     p.slider__item-date.slider__item-date--dark
