--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -59,7 +59,7 @@
 }
 
 $themeColor: #2bc584;
-$backColor: #ddd;
+$backColor: $c-grey;
 $textShadow: rgba(black, 0.35) 1px 1px 1px;
 
 .progress--circle {
