--- a/src/scss/blocks/_services.scss
+++ b/src/scss/blocks/_services.scss
@@ -1,87 +1,88 @@
 .services {
-  margin-bottom: 45px;
-  max-width: 100%;
+    margin-bottom: 45px;
+    max-width: 100%;
 }
 
 .services__container {
-  max-width: 100%;
+    max-width: 100%;
 }
 
 .services__header {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  margin-bottom: 27px;
-  .divider {
+    display: flex;
+    align-items: center;
     width: 100%;
-  }
-  @media (min-width: $tablet) {
-    margin-bottom: 37px;
-  }
+    margin-bottom: 27px;
+    .divider {
+        width: 100%;
+    }
+    @media (min-width: $tablet) {
+        margin-bottom: 37px;
+    }
 }
 
 .services__title {
-  @media (min-width: $tablet) {
-    margin: 0 14px 0 0;
-  }
-}
-
-.services__slider {
-  margin-bottom: 32px;
+    @media (min-width: $tablet) {
+        margin: 0 14px 0 0;
+    }
 }
 
 .service {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 22px 0;
-  overflow: hidden;
-  width: 100%;
-  background-color: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 22px 0;
+    overflow: hidden;
+    width: 100%;
+    background-color: #fff;
+    transition: 0.2s;
     &:visited {
         color: $c-black;
     }
+    &:hover {
+        box-shadow: 0 5px 20px rgba(110, 119, 129, 0.1);
+        transform: scale(1.01);
+    }
 }
 .service__name {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 26px;
-  margin: 0;
-  padding-left: 88px;
-  position: relative;
-  &::before {
-    content: "";
-    display: block;
-    position: absolute;
-    background: url("../img/icons/methodist.svg") no-repeat center;
-    width: 38px;
-    height: 48px;
-    background-size: cover;
-    left: 26px;
-  }
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 26px;
+    margin: 0;
+    padding-left: 88px;
+    position: relative;
+    &::before {
+        content: "";
+        display: block;
+        position: absolute;
+        background: url("../img/icons/methodist.svg") no-repeat center;
+        width: 38px;
+        height: 48px;
+        background-size: cover;
+        left: 26px;
+    }
 }
 
 .service__deadline {
-  font-style: normal;
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 26px;
-  color: #c3cad6;
-  margin: 0;
-  padding-left: 88px;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 26px;
+    color: #c3cad6;
+    margin: 0;
+    padding-left: 88px;
 }
 
 .services__navigation {
-  @include swiperCenter;
-  @media (min-width: $tablet) {
-    display: none;
-  }
-  &--desktop {
-    display: none;
+    @include swiperCenter;
     @media (min-width: $tablet) {
-      display: flex;
-      width: auto;
-      margin-left: 15px;
+        display: none;
     }
-  }
+    &--desktop {
+        display: none;
+        @media (min-width: $tablet) {
+            display: flex;
+            width: auto;
+            margin-left: 15px;
+        }
+    }
 }
